# ANIME-F-orge

./: API.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  DEPLOYMENT.md  DEV_GUIDE.md  IMPLEMENTATION.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  START_HERE.md  TESTING_RESULTS.md  TODO.md  USER_JOURNEY.md  WILL_IT_WORK.md  docker-compose.yml
api/: .env.example  .gitignore  API_DOCUMENTATION.md  API_IMPLEMENTATION_SUMMARY.md  API_QUICK_REFERENCE.md  BUILD_SUMMARY.md  Cargo.toml  FILES_CREATED.md  Makefile  QUICKSTART.md  README.md  thunder-collection.json
api/scripts/: dev.sh  setup_db.sh
api/src/: main.rs
api/src/db/: mod.rs  schema.sql
api/src/db/migrations/: 001_users.sql  002_animations.sql  003_animation_tags.sql
api/src/middleware/: auth.rs  cors.rs
api/src/models/: animation.rs  mod.rs  user.rs
api/src/routes/: animations.rs  auth.rs  marketplace.rs  mod.rs  search.rs  users.rs
api/src/utils/: errors.rs  jwt.rs  mod.rs
cli/: .env.example  .gitignore  Cargo.toml  EXAMPLES.md  README.md  SUMMARY.md
cli/src/: cli.rs  main.rs
cli/src/commands/: config.rs  create.rs  mod.rs  publish.rs  render.rs  search.rs
cli/src/config/: mod.rs  providers.rs
cli/src/llm/: mod.rs  ollama.rs
cli/src/utils/: mod.rs  progress.rs
engine/: .env.example  .gitignore  README.md  animaforge_cli.py  pyproject.toml  requirements.txt  setup.py
engine/animaforge_engine/: __init__.py  generator.py  renderer.py  validator.py
engine/animaforge_engine/prompts/: __init__.py  system.py
engine/animaforge_engine/templates/: __init__.py  base.py
engine/examples/: basic_usage.py  template_showcase.py
engine/tests/: __init__.py  test_validator.py
scripts/: init-db.sql  seed-data.sql  setup.sh  test-all.sh
web/: .env.example  COMPONENTS.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/animation/[id]/: page.tsx
web/app/browse/: page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/components/: AnimationCard.tsx  AnimationPlayer.tsx  Button.tsx  Footer.tsx  Header.tsx
web/hooks/: useAnimations.ts  useAuth.ts
web/lib/: api.ts
web/store/: authStore.ts
web/types/: index.ts
web/utils/: helpers.ts
