[package]
name = "animaforge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
validator = { version = "0.16", features = ["derive"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
reqwest = "0.11"
