[package]
name = "animaforge"
version = "0.1.0"
edition = "2021"
authors = ["AnimaForge Team"]
description = "CLI tool for creating AI-powered animations"
license = "MIT"

[[bin]]
name = "animaforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart"] }
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
anyhow = "1"
thiserror = "1"
dirs = "5"
urlencoding = "2"
async-trait = "0.1"
